# OpenCouncil

./: .env.example  .gitignore  LICENSE  PROMPT.md  README.md  install.sh  pyproject.toml
src/open_council/: __init__.py  main.py
src/open_council/cli/: __init__.py  constants.py  graph_ui.py  prompting.py  repl.py
src/open_council/config/: __init__.py  bootstrap.py  env_files.py
src/open_council/core/: __init__.py  llm.py  throttle.py
src/open_council/graphs/: __init__.py  executive_graph.py  odin_nodes.py
src/open_council/runtime/: __init__.py  provider_readiness.py  update_check.py
src/open_council/state/: __init__.py  executive.py
src/open_council/tools/: __init__.py  jina_reader.py  search_base.py  search_ddg.py
tests/: test_executive_graph.py  test_executive_state.py  test_install_script.py  test_llm_client.py  test_main_cli.py  test_odin_nodes.py  test_search_ddg_and_jina_reader.py  test_throttle_and_search_base.py
