[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-council"
version = "0.1.0"
description = "A private, multi-agent terminal workstation for deep research and system stress-testing."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "langgraph>=0.0.26",
    "litellm>=1.35.0",
    "rich>=13.7.0",
    "duckduckgo-search>=5.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.1",
    "aiohttp>=3.9.0"
]

[project.scripts]
council = "open_council.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "flake8>=7.0.0",
    "black>=24.0.0"
]