[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-council"
version = "0.1.0"
description = "A private, multi-agent terminal workstation for deep research and system stress-testing."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "langgraph~=0.2.0",
    "litellm~=1.60",
    "rich~=13.9",
    "pydantic~=2.10",
    "python-dotenv~=1.0",
    "aiohttp~=3.11",
    "duckduckgo-search~=7.2"
]

[project.scripts]
council = "open_council.main:app"

[project.optional-dependencies]
dev = [
    "pytest~=8.3",
    "pytest-asyncio~=0.25",
    "flake8~=7.1",
    "black~=24.10"
]

[tool.hatch.build.targets.wheel]
packages = ["src/open_council"]